# listening-history-quiz

./: .gitignore  DEPLOYMENT.md  Procfile  README.md  RENAME_GUIDE.md  pyproject.toml  pyvenv.cfg  render.yaml  requirements.txt  vercel.json
src/: __init__.py  app.py  models.py  multiplayer_question_generator.py  question_generator.py  question_templates.json  spotify_data.py  template_question_generator.py
static/css/: style.css
static/js/: app.js
templates/: base.html  index.html  join_error.html  join_lobby.html  lobby.html  quiz.html  quiz_mobile.html  results.html
